# savi

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
savi/: __init__.py  odds.py
tests/: test_odds.py  test_savi.py
